# ascii-video-player

./: .gitignore  ASCIIPlayer.bat  BUILD_ASCII.bat  CONTRIBUTING.md  INSTALL_GUIDE.md  INSTALL_WINDOWS.bat  LICENSE  README.md  apt_install.sh  install_linux.sh  pyproject.toml  requirements.txt  run_ascii.sh  setup_ascii.py
docs/: STREAMING_GUIDE.md
pkg/: ascii-stream_1.2.0_all.deb
pkg/debian/DEBIAN/: control  postinst
pkg/debian/usr/share/ascii-stream/: main.py
src/: main.py
